  characters with font files containing more than 260 characters, and
  were ineffective with smaller ones.
* troff: OpenType and TrueType kerning pairs with a position difference
  of zero are now completely ignored. They could previously overwrite a
  previous positioning difference for the same pair. Also if a kerning
  pair occurs more than once in the metrics file, the first definition
  is now used instead of the last one.
* tbl: Storage space expansions because of long lines inside a table are
  now done properly.
* troff: The "\n[.ascender]" and "\n[.descender]" registers contain the
  typical extents of the current font above and below the base line,
  scaled to the current point size.
* troff: Zero-width space characters are no longer considered word space
  when a line is justified. This fixes "\X" device control functions in
  diversions.
* dpost: The metrics of the underscore character in the PostScript Symbol
  font (which is mapped to "\(ul" and is used to draw horizontal lines)
  are now dynamically adjusted in the generated PostScript code. This
  works around varying metrics of this character in different versions
  of the Symbol font. Note that this does not work in PDF unless the
  font is embedded at the time the document is distilled.
* dpost: The "\(sq" glyph is now filled in any font with a "Weight" entry
  of "Bold", "Ultra", or "Heavy".
* dpost: The "post" device works again; dpost previously crashed with a
  null pointer dereference when it was used.
* troff/dpost: EPS files that contain carriage-return characters as
  newline indicators are now correctly handled with the ".psbb" request
  and the picture inclusion mechanism.
* [nt]roff: Requests like ".bd" or ".kernpair" now warn when an invalid
  font name is given.
* [nt]roff: No "illegal number" warning is printed anymore when a "\}" is
  found as part of a possibly numeric argument, as in e.g. ".bp \}".
* [nt]roff: The ".mc" request does not require an argument so no warning